[package]
name = "send_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive"] }
indicatif = "0.17.6"
tungstenite = { version = "0.20.0", features = ["rustls", "rustls-tls-webpki-roots"] }
